compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__discarded_arg_in_external_are_passed_correctly.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"wibble\", \"wobble\")\npub fn woo(_a: a) -> Nil\n"
---
----- SOURCE CODE

@external(erlang, "wibble", "wobble")
pub fn woo(_a: a) -> Nil


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([woo/1]).

-file("/root/project/test/my/mod.rakun", 3).
-spec woo(any()) -> nil.
woo(_a) ->
    wibble:wobble(_a).
