compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__erlang_and_javascript.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"one\", \"one\")\n@external(javascript, \"./one.mjs\", \"one\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([one/1]).

-file("/root/project/test/my/mod.rakun", 4).
-spec one(integer()) -> integer().
one(X) ->
    one:one(X).
