compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__hole_return_javascript.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 202
expression: "\n@external(javascript, \"one\", \"one\")\npub fn one(x: List<Int>) -> List<_> {\n  todo\n}\n"
---
----- SOURCE CODE

@external(javascript, "one", "one")
pub fn one(x: List<Int>) -> List<_> {
  todo
}


----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.rakun:3:34
  │
3 │ pub fn one(x: List<Int>) -> List<_> {
  │                                  ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
