compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__inlining_external_functions_from_another_module.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 63
expression: "import atom\npub fn main() {\n  atom.make(\"ok\")\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> binary().
main() ->
    erlang:binary_to_atom(<<"ok"/utf8>>).
