compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__integration_test1_3.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"Elixir.MyApp\", \"run\")\npub fn run() -> Int\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([run/0]).

-file("/root/project/test/my/mod.rakun", 3).
-spec run() -> integer().
run() ->
    'Elixir.MyApp':run().
