compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__javascript_only_indirect.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\npub fn should_be_generated(x: Int) -> Int {\n  x\n}\n\n@external(javascript, \"one\", \"one\")\npub fn should_not_be_generated(x: Int) -> Int\n\npub fn also_should_not_be_generated() {\n  should_not_be_generated(1)\n  |> should_be_generated\n}\n"
---
----- SOURCE CODE

pub fn should_be_generated(x: Int) -> Int {
  x
}

@external(javascript, "one", "one")
pub fn should_not_be_generated(x: Int) -> Int

pub fn also_should_not_be_generated() {
  should_not_be_generated(1)
  |> should_be_generated
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([should_be_generated/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec should_be_generated(integer()) -> integer().
should_be_generated(X) ->
    X.
